--- a/app/views/public/donations/_terms_section.html.erb
+++ b/app/views/public/donations/_terms_section.html.erb
@@ -7,7 +7,7 @@
         class: "mt-1 h-5 w-5 rounded border-gray-300 text-[#5d1655] focus:ring-[#5d1655] cursor-pointer #{donation.errors[:terms_accepted].present? ? 'border-red-500' : ''}" %>
     <div class="text-sm text-gray-700">
       Wyrażam zgodę na przetwarzanie moich danych osobowych przez Fundację Indywidualności Otwartych (administratora danych) zgodnie z zapisami
-      <a href="https://www.edk.org.pl/wp-content/uploads/2025/02/regulamin-uczestnika-EDK.pdf" 
+      <a href="https://www.edk.org.pl/regulamin-serwisu/" 
          target="_blank" 
          class="underline text-[#5d1655] hover:text-[#4a1147]">Regulaminu i Polityki</a>
       <span class="text-[#5d1655]">*</span>
