--- a/app/views/admin/donations/index.html.erb
+++ b/app/views/admin/donations/index.html.erb
@@ -111,7 +111,8 @@
                 <% end %>
               </td>
               <td class="px-6 py-4 text-sm text-gray-500 dark:text-gray-400">
-                <%= donation.created_at.strftime("%d.%m.%Y") %>
+                <%= donation.created_at.strftime("%d.%m.%Y") %><br>
+                <%= donation.created_at.strftime("%H:%M:%S") %>
               </td>
               <td class="px-6 py-4 text-right text-sm font-medium">
                 <div class="flex items-center justify-end gap-1">
